# argus

./: .env.example  .gitignore  Caddyfile  Caddyfile.prod  Makefile  README.md  docker-compose.prod.yaml  docker-compose.yaml  vs.code-workspace
.trunk/: trunk.yaml
.trunk/configs/: .markdownlint.yaml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  sensors.csv
backend/app/: constants.py  database.py  emailer.py  exceptions.py  fastapi.py  security.py  settings.py
backend/app/bootstrap/: __init__.py  cors.py  exceptions.py
backend/app/cli/: __init__.py  utils.py
backend/app/cli/groups/: __init__.py  db.py  sensor.py
backend/app/routes/: __init__.py  alarms.py  demo.py  readings.py  regions.py  sensors.py  users.py
backend/app/schema/: __init__.py  geojson.py  region.py  sensor.py  user.py
backend/app/schema/alarm/: __init__.py  alarm.py  ast.py  rules.py
backend/app/stubs/: datetime.py
backend/app/tasks/: __init__.py  alarm_identification.py
backend/app/tests/: test_emailer.py  test_stubbed_datetime.py  test_watershed_delineation.py
backend/app/tests/alarms/: test_alarm.py
backend/app/tests/fixtures/: ground_level_sensor_readings.833c2233.csv
backend/app/tests/routes/: test_users.py
backend/app/tests/utils/: test_security.py
backend/app/utils/: networking.py  security.py
backend/app/worker/: __init__.py  __main__.py  alarm_identification.py  rethink_backend.py  watershed_delineation.py
backend/notebooks/: README.md  rethink.ipynb  watershed.ipynb
frontend/: .eslintrc  Dockerfile  LICENSE.md  README.md  index.html  package.json  vite.config.js
frontend/src/: constants.js  global.css  main.jsx
frontend/src/api/: alarms.js  fetch.js  regions.js  sensor-readings.js  sensors.js  users.js
frontend/src/components/button/: button-popover.jsx  index.js
frontend/src/components/chart/: chart.js
frontend/src/components/dialog/: dialog-app-bar.jsx  dialog-fullscreen.jsx  index.js
frontend/src/components/link/: Link.jsx
frontend/src/components/map/: map-container.jsx
frontend/src/layouts/dashboard/: config-navigation.jsx  header.jsx  index.jsx  main.jsx  nav.jsx
frontend/src/layouts/dashboard/common/: account-popover.jsx  language-popover.jsx  searchbar.jsx
frontend/src/pages/: alarm-history.jsx  alarms.jsx  login.jsx  map.jsx  sensor-init.jsx  sensors.jsx  signup.jsx
frontend/src/recoil/: alarms.js  current-user.js  database.js  regions.js  sensor-readings.js  sensors.js  users.js
frontend/src/routes/: sections.jsx
frontend/src/sections/alarms/: alarm-table-head.jsx  alarm-table-row.jsx  user-table-row.jsx  utils.js
frontend/src/sections/alarms/modals/: NestedForm.jsx  new-alarm-modal.jsx
frontend/src/sections/alarms/view/: index.js  (+2 more)
frontend/src/sections/login/: login-view.jsx
frontend/src/sections/overview/: app-news-update.jsx  app-recent-alarm-events.jsx  app-recent-notifications.jsx  app-tasks.jsx  app-website-visits.jsx  app-widget-summary.jsx
frontend/src/sections/sensors/: sensor-table-row.jsx  user-table-row.jsx
frontend/src/sections/signup/: index.js  signup-view.jsx
frontend/src/theme/: index.jsx
frontend/src/utils/: formik.js  platform.js  units.js
mosquitto/: .gitignore  Dockerfile  README.md  mosquitto.conf  pyproject.toml
mosquitto/app/: __main__.py  database.py  exceptions.py  handlers.py  schema.py  settings.py
mosquitto/app/tests/: test_handle_message.py  test_message_parsing.py
mosquitto/config/: mosquitto.conf
schemas/rethink_test_schema/test/: alarm_notification_history.info  alarms.info  alarms_event_records.info  alarms_events.info  regions.info  sensor_readings.info  sensor_telemetry.info  sensors.info  users.info
tunnel/: Dockerfile  README..md
(+18 files in other folders)
