[tool.poetry]
name = "argus-backend"
version = "0.1.0"
description = ""
authors = ["NoahCardoza <noahcardoza@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = { extras = ["all"], version = "^0.109.0" }
rethinkdb = "^2.4.10.post1"
typer = { extras = ["all"], version = "^0.9.0" }
passlib = "^1.7.4"
python-jose = "^3.3.0"
bcrypt = "^4.1.2"
pandas = "^2.2.0"
matplotlib = "^3.8.2"
pyarrow = "^15.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.4"
pytest-asyncio = "^0.23.4"

[tool.ruff.flake8-bugbear]
extend-immutable-calls = [
  "fastapi.Depends",
  "fastapi.params.Depends",
  "fastapi.Query",
  "fastapi.params.Query",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
